--- a/css/main.css
+++ b/css/main.css
@@ -7,24 +7,29 @@
 :root {
 	--primary-color: #026357;
 	--secondary-color: #00CC76;
+	--tertiary-color: #fff;
+	--quaternary-color: #d8d8d8;
 }
+
 
 /*General styling*/
 
 body {
-	background: url(../assets/mountains-3620_1920.jpg);
+	background: url(../assets/mountains.jpg);
 	background-repeat: no-repeat;
 	background-size: auto;
 	background-attachment: fixed;
 }
 
-a:link {
+a {
 	text-decoration: none;
 }
+
 a:hover {
 	text-decoration: none;
 	color: var(--secondary-color);
 }
+
 
 /*Utility*/
 
@@ -38,14 +43,13 @@ a:hover {
 	gap: 2rem;
 }
 
+
 /*Header*/
 
 .header {
-	color: #fff;
+	color: var(--tertiary-color);
 	justify-content: center;
-	align-items: center;
-	gap: 2rem;
-	min-height: 100vh;
+	height: 100vh;
 }
 
 .header_name {
@@ -57,37 +61,38 @@ a:hover {
 	flex-direction: column;
 	width: 16rem;
 	gap: 2rem;
+	font-family: 'Roboto', sans-serif;
 }
 
 .header_element1 {
 	font-size: 25px;
-	font-family: 'Roboto', sans-serif;
+	/* font-family: 'Roboto', sans-serif; */
 	font-weight: 400;
 	background: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(5px);
-	border: 2px solid #fff;
+	border: 2px solid var(--tertiary-color);
 	border-radius: 1rem;
 	padding: 1rem;
 }
 
 .header_element2 {
-	font-size: 15px;
+	font-size: 1rem;
 	font-style: oblique;
 	font-weight: 300;
-	font-family: 'Roboto', sans-serif;
+	/* font-family: 'Roboto', sans-serif; */
 	text-align: end;
 	background: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(5px);
-	border: 1px solid #fff;
+	border: 1px solid var(--tertiary-color);
 	border-radius: 1rem;
 	padding: 1rem;
-
 }
+
 
 /*Container*/
 
 .container {
-	background-color: #fff;
+	background-color: var(--tertiary-color);
 	color: var(--primary-color);
 	margin: auto;
 	width: 65vw;
@@ -95,58 +100,47 @@ a:hover {
 	padding: 1rem 10rem;
 }
 
-/*Header*/
+
+/*Navigation*/
 
 .navigation_main {
-	justify-content: space-between;
-	align-items: center;
 	height: 8rem;
 	font-family: 'Roboto', sans-serif;
 	font-weight: 400;
 	font-size: 1rem;
 }
 
-.navigation_logo {
+.navigation_main img {
 	height: 100%;
-	aspect-ratio: 1;
 	margin: 0;
-	/* border: 1px solid var(--primary-color); */
-	border-radius: 1rem;
 }
 
-.navigation_list {
+.navigation_main ul {
 	list-style: none;
-	justify-content: space-between;
 	padding: 0;
-	margin: 0 1rem 0 1rem;
 }
 
-.list_item {}
-
-.navigation_search {
+.navigation_main form {
 	color: var(--primary-color);
 	border-color: var(--primary-color);
 }
 
-.search_item {
+.search_box {
 	max-width: 8rem;
 	margin: -3px;
 	border: 1px solid #bababa;
-	/* padding: 0; */
-	/* gap: 0; */
 	color: var(--primary-color);
 	border-radius: 5px;
-	background-color: #fff;
+	background-color: var(--tertiary-color);
 	caret-color: var(--primary-color);
-
 }
 
-.pointer:hover {
+.search_button:hover {
 	color: var(--secondary-color);
 	cursor: pointer;
 }
 
-.navigation_language {
+.navigation_main select {
 	border: 0;
 	color: var(--primary-color);
 }
@@ -154,7 +148,7 @@ a:hover {
 
 /*Headlines*/
 
-.headlines_upper {
+.headlines_up {
 	margin-top: 2rem;
 }
 
@@ -169,7 +163,7 @@ a:hover {
   flex: auto;
 	height: 1px;
 	transform: translate(0, 6px);
-  border-bottom: 1px solid #d8d8d8;
+  border-bottom: 1px solid var(--quaternary-color);
 	margin: 0 2rem 0 2rem;
 }
 
@@ -184,32 +178,31 @@ a.view-all {
 }
 
 .headlines_article-1 {
-	background-image: url(../assets/loveourplanet-640.jpg);
+	background-image: url(../assets/loveourplanet.jpg);
 	background-repeat: no-repeat;
-	background-size: 95% 100%;
+	background-size: 100% 100%;
 	width: 90%;
 	height: 350px;
 	justify-content: center;
 	align-items: end;
-	padding: 2rem 3rem 2rem 2rem;
-	color: #fff;
+	padding: 2rem;
+	color: var(--tertiary-color);
 	font-size: 1.25rem;
 	font-family: 'Times New Roman', Times, serif;
 	font-weight: 600;
-	border-right: 1px solid #d8d8d8;
+	/* border-right: 1px solid #d8d8d8; */
 }
 
 .headlines_articles-2-3-4 {
 	flex-direction: column;
+	justify-content: center;
+	padding-left: 2rem;
+	gap: 2rem;
 	font-size: 1.1rem;
 	font-family: 'Times New Roman', Times, serif;
 	font-weight: 600;
-	/* border-left: 1px solid #d8d8d8;
-	margin-left: 2rem; */
-}
-
-.headlines-article-individual {
-	padding: 1rem 2rem;
+	border-left: 1px solid var(--quaternary-color);
+	margin-left: 2rem;
 }
 
 .date {
@@ -234,36 +227,33 @@ a.view-all {
 
 /*Opinion*/
 
-.opinion_upper {
+.opinion_up {
 	margin-top: 4rem;
 }
 
-.opinion {
-	gap: 1.5rem;
+.opinion_main {
+	/* align-items: end; */
 }
 
-.opinion_article {
-
+.opinion_article-2 {
+	border-left: 1px solid var(--quaternary-color);
+	border-right: 1px solid var(--quaternary-color);
+	padding: 0 1.5rem 0 1.5rem;
+	margin: 0 1.5rem 0 1.5rem;
 }
 
-.picture {
+.opinion_main article img {
 	width: 100%;
 	height: 100%;
 }
 
-.opinion_article-2 {
-	border-left: 1px solid #d8d8d8;
-	border-right: 1px solid #d8d8d8;
-	padding: 0 1.5rem 0 1.5rem;
-}
-
-.opinion_article-author {
+.opinion_main article h2 {
 	font-size: 1.25rem;
 	font-family: 'Times New Roman', Times, serif;
 	font-weight: 600;
 }
 
-.opinion_article-link {
+.opinion_main article a {
 	font-size: 1rem;
 	font-family: 'Roboto', sans-serif;
 	font-weight: 400;
@@ -271,30 +261,66 @@ a.view-all {
 
 
 /*Culture*/
-/* .culture_article-1 {
-	background-image: url(../assets/forest-640.jpg);
-	background-repeat: no-repeat;
-	background-size: 95% 100%;
-	width: 60%;
-	height: 350px;
-	justify-content: center;
-	align-items: end;
-	padding: 2rem 3rem 2rem 2rem;
-	color: #fff;
-	font-size: 1.25rem;
-	font-family: 'Times New Roman', Times, serif;
-	font-weight: 600;
-	border-right: 1px solid #d8d8d8;
-} */
 
-.culture_forest-link {
+.headlines_articles {
+	align-items: start;
+	font-family: 'Times New Roman', Times, serif;
+}
+
+.headlines_articles section {
+	flex-direction: column;
+	gap: 2rem;
+	border-left: 1px solid var(--quaternary-color);
+	padding-left: 2rem;
+	margin-left: 2rem;
+}
+
+.culture_link {
 	display: block;
 	margin-top: 1rem;
 	font-size: 1.25rem;
-	font-family: 'Times New Roman', Times, serif;
 	font-weight: 600;
 }
 
-.culture_articles-2-3 {
+.culture_articles-2-3 img {
+	width: 100%;
+	aspect-ratio: 1.5755;
+}
+
+.culture_articles-2-3 a {
+	font-size: 1.1rem;
+}
+
+
+
+/*Footer*/
+
+.footer_main {
+	margin: 8rem 0 4rem 0;
+	font-size: 12px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: 500;
+	justify-content: start;
+	align-items: start;
+	gap: 13rem;
+}
+
+.footer_column {
 	flex-direction: column;
+}
+
+.footer_column img {
+	max-height: 8rem;
+}
+
+.footer_column ul {
+	flex-direction: column;
+	list-style: none;
+	align-items: start;
+	gap: 0.5rem;
+	padding: 0;
+}
+
+.li_top-margin {
+	margin-top: 1rem;
 }
