--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ a:hover {
 
 .header_element {
 	flex-direction: column;
-	width: 16rem;
+	max-width: 16rem;
 	gap: 2rem;
 	font-family: 'Roboto', sans-serif;
 }
@@ -323,4 +323,156 @@ a.view-all {
 
 .li_top-margin {
 	margin-top: 1rem;
+}
+
+
+
+@media screen and (max-width: 40rem) {
+
+
+	/*General styling*/
+
+	body {width: 100vw;}
+
+	img {
+		width:100%;
+	}
+
+
+	/*Utility*/
+
+	.flex {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.spaced {
+		gap: 1rem;
+	}
+
+
+	/*Header*/
+
+	.header_name {
+		margin: 0 1rem 0 1rem;
+		font-size: 6rem;
+		text-align: center;
+		font-family: 'Chonburi', cursive;
+	}
+
+	.header_element {
+		flex-direction: column;
+		justify-content: center;
+		max-width: 16rem;
+		/* gap: 2rem; */
+		font-family: 'Roboto', sans-serif;
+	}
+
+
+	/*Container*/
+
+	.container {
+		margin: auto;
+		width: 100vw;
+		padding: 0 2rem 4rem;
+		/* border-radius: 0; */
+	}
+
+
+	/*Navigation*/
+
+	.navigation_main img {
+		width: 8rem;
+		margin: 0;
+		display: none;
+	}
+
+	.navigation_main ul {
+		flex-direction: row;
+	}
+
+	.navigation_right {
+		flex-direction: row;
+	}
+
+	.search_box {
+		max-width: 5rem;
+	}
+
+
+	/*Headlines*/
+
+	.headlines_up {
+		flex-direction: row;
+	}
+
+	.headlines_article-1 {
+		width: 100%;
+		justify-content: end;
+	}
+
+	.headlines_articles-2-3-4 {
+		flex-direction: column;
+		align-items: start;
+		padding: 0;
+		border: 0;
+		border-style: none;
+		margin: 0;
+		margin-top: 3rem;
+	}
+
+
+	/*Opinion*/
+
+	.opinion_up {
+		flex-direction: row;
+	}
+
+	.opinion_main{
+		gap: 2rem;
+	}
+
+	.opinion_articles-1-3 {
+		width: 100%;
+	}
+
+	.opinion_article-2 {
+		border: 0;
+		padding: 0;
+		margin: 0;
+		width: 100%;
+	}
+
+
+	/*Culture*/
+
+	.headlines_articles section {
+		align-items: start;
+		border: 0;
+		padding: 0;
+		padding-top: 2rem;
+		margin: 0;
+		gap: 0rem;
+		gap: 2rem;
+		width: 100%;
+	}
+
+	.culture_articles-2-3 {
+		width: 100%;
+		justify-content: center;
+		align-items: center;
+	}
+
+
+	/*Footer*/
+
+	.footer_main {
+		flex-direction: row;
+		align-items: start;
+		margin: 8rem 0 2rem 0;
+		gap: 2rem;
+	}
+
 }
